# bionic-head-pipeline

./: .gitignore  README.md  pyproject.toml  阶段式目标.md  项目说明goal.md
.github/workflows/: pytest.yml
config/: emotalk.example.json  expression_channels.example.json  mock.json  real.example.json
data/demo/: README.md
docs/operations/: client-audio-face-sync.md  demo-acceptance.md  expression-control.md  face-channel-mapping.md  interactive-demo-client.md  local-demo-client.md  mock-development.md  real-providers.md  stream-client.md  ue5-playback-contract.md
docs/protocols/: bionic-head-stream-v1.md  bionic-head-ue5-playback-v1.md  bionic-head-ue5-v1.md
docs/status/: 2026-06-24-current-state.md
scripts/: __init__.py  benchmark.py  benchmark_emotalk_sidecar.py  collect_demo_artifacts.py  expression_smoke.py  history_smoke.py  interactive_demo_client.py  interrupt_stress.py  local_demo_client.py  probe_face_channels.py  render_emotalk_grey_head.py  replay_ue5_frames.py  run_demo_acceptance.py  stream_client.py  validate_ue5_playback_contract.py
src/bionic_head/: config.py  emotalk_fake_sidecar.py  emotalk_sidecar_worker.py  expression.py  eye_continuity.py  face_stitcher.py  sidecar_protocol.py  ue5_playback_contract.py
tests/: conftest.py  test_package.py
tests/acceptance/: test_p0_acceptance.py
tests/fixtures/: README.md
tests/integration/: conftest.py  test_emotalk_sidecar_provider_real.py  test_emotalk_sidecar_worker_real.py  test_http_api.py  test_interrupt_stress.py  test_real_pipeline.py  test_stream_emotalk_sidecar_real.py  test_websocket_api.py
(+143 files in other folders)
