[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionic-head"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "pydantic>=2.10,<3",
  "numpy>=2.1,<3",
  "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-timeout>=2.3,<3",
]
asr = ["faster-whisper>=1.1,<2"]
llm = ["httpx>=0.28,<1"]
client = ["websockets>=15,<16"]
client-audio = ["sounddevice>=0.5,<1"]
all = [
  "faster-whisper>=1.1,<2",
  "httpx>=0.28,<1",
  "websockets>=15,<16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "integration: requires real external providers",
]
